# kurikone-clan-battle-bot

./: .env.example  .gitignore  LICENSE.md  README.md  config.py  database.py  enums.py  locale.py  locales.py  logger.py  main.py  models.py  pyproject.toml  repository.py  requirements.txt  services.py  transactional.py  ui.py  utils.py
db_script/: data-dummy.sql  master-data.sql  schema.sql  script.sql
dbscript/: script.sql
docs/: Purikone CB Bot.drawio
locales/: en-us.yaml  en.yaml  ja.yaml
