[project]
name = "kurikone-cb-bot"
version = "0.1.0"
description = "Princess Connect Discord CB Bot"
requires-python = ">=3.12"
dependencies = [
    "attrs==25.3.0",
    "dbutils==3.1.0",
    "discord-py==2.5.2",
    "dotenv>=0.9.9",
    "envier==0.6.1",
    "mariadb>=1.1.12",
    "pyi18n-v2==1.2.2",
]
